hphp/hack/test/typecheck/stricter_consts/class_trait_1.bad.php.exp
File "class_trait_1.bad.php", line 14, characters 7-7:
Class `D` does not correctly implement all required members  (Typing[4340])
  File "class_trait_1.bad.php", line 14, characters 17-17:
  Some members are incompatible with those declared in type `C`
  File "class_trait_1.bad.php", line 11, characters 13-13:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "class_trait_1.bad.php", line 7, characters 13-13:
  `X` inherited from `C`
  File "class_trait_1.bad.php", line 11, characters 13-13:
  conflicts with constant `X` inherited from `T`.
