hphp/hack/test/typecheck/stricter_consts/class_trait_1.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

// Error

class C {
  const int X = 2;
}

trait T {
  const int X = 1;
}

class D extends C {
  use T;
}
